# web3-py-dev-template

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: py310.yaml  py39.yaml  style.yaml  typing.yaml
scripts/: block_number.py
tests/: __init__.py  test_actions.py
tests/scripts/: test_block_number.py
