[tool.poetry]
name = "web3-py-dev-template"
version = "0.1.0"
description = "a template for developing programs with web3.py"
authors = ["tallywiesenberg <t.j.wies@gmail.com>"]
readme = "README.md"
packages = [{include = "web3_py_dev_template", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^6.2.5"
black = "^22.10.0"
pre-commit = "^3.3.3"
mypy = "^1.0"
eth-brownie = "^1.19.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
