[tool.poetry]
name = "grapefruit"
version = "0.1.0"
description = "a framework for scripting on EVM chains"
authors = ["tallywiesenberg <t.j.wies@gmail.com>"]
readme = "README.md"
packages = [{include = "web3_py_dev_template", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
telliot-core = "^0.3.0"


[tool.poetry.group.dev.dependencies]
pytest = "^6.2.5"
black = "^22.10.0"
pre-commit = "^3.3.3"
mypy = "^1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
